# eoos-project-if-posix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE_EN.txt  LICENSE_RU.txt  README.md
cmake/: EOOS.cmake  EOOSConfig.cmake.in  EoosConfig.cmake.in  eoos.cmake
codebase/: CMakeLists.txt
codebase/app/: CMakeLists.txt
codebase/app/source/: Configuration.cpp  Program.cpp
codebase/eoos/: CMakeLists.txt
quality/sca/documentation/: eoos-if-posix-report.xlsx  eoos-report.xlsx
quality/sca/projects/absint/: eoos-if-posix.dax
quality/sca/projects/absint/stubs/include/: pthread.h  sched.h  semaphore.h  stdio.h  stdlib.h  unistd.h
quality/sca/projects/absint/stubs/include/sys/: types.h
quality/sca/reports/: eoos-if-posix-report.xlsx
quality/ut/reports/coverage/: index.api.Collection.hpp.8d12d6fe0eee186d58d28825cf22f55e.html  index.api.Guard.hpp.fcff75998d2930158c1b02c24dc7eab2.html  index.api.Heap.hpp.ba21e86f37d44fe2cdd0cc69998eba00.html  index.api.IllegalValue.hpp.07760186115f8029024a8a2b4f5427ef.html  index.api.Iterable.hpp.560c3b248fbd24c79ce0c989d0183ab5.html  index.api.Iterator.hpp.41a21237742a31af911fcd0d51ed0150.html  index.api.List.hpp.fdf197ec3ff6da55a1c72c67a304b72d.html  index.api.ListIterator.hpp.e717f222891f656a9fb0819bfb6d7e8f.html  index.api.Mutex.hpp.3586194bf1c3b1500ba84348a7c90850.html  index.api.MutexManager.hpp.256caa96e9210d5af8a0d6f09c3be747.html  index.api.Object.hpp.33edff826e7d96b8915ae3675425a606.html  index.api.OutStream.hpp.e1a87dff7ef586c78240d226750d96f8.html  index.api.Queue.hpp.856d591b62a923b97e916a50b308bc4d.html  index.api.Runnable.hpp.9592b974097f3be366736d1c79ce8055.html  index.api.Scheduler.hpp.2275f419cce83bbd38b8893387daf61c.html  index.api.Semaphore.hpp.16cb2a0c916b3e158eeff2b30392bc9a.html  index.api.SemaphoreManager.hpp.b8b8503271986548c40641ecc0b8e16d.html  index.api.SequenceContainer.hpp.7cbfbbacbc1e4b8c53c32da9974092c4.html  index.api.SmartPointer.hpp.eb243eae9d0a0b7c26419d3129037cbf.html  index.api.StreamManager.hpp.66030027d7f6e97c775fd57afc10ef5b.html  index.api.String.hpp.6cad349871d2900de639299d03c53909.html  index.api.System.hpp.49bc615ebaa7f5e715f6566c5ff686bd.html  index.api.Task.hpp.edbffc2bfdeac571d475b4a6602b8289.html  index.api.Thread.hpp.e9eeaecef15acea3fda393475e9a0bf7.html  index.codebase_interface_include_public_api.Collection.hpp.html  index.codebase_interface_include_public_api.Heap.hpp.html  index.codebase_interface_include_public_api.IllegalValue.hpp.html  index.codebase_interface_include_public_api.Iterable.hpp.html  index.codebase_interface_include_public_api.Iterator.hpp.html  index.codebase_interface_include_public_api.List.hpp.html  index.codebase_interface_include_public_api.ListIterator.hpp.html  index.codebase_interface_include_public_api.Mutex.hpp.html  index.codebase_interface_include_public_api.Object.hpp.html  index.codebase_interface_include_public_api.OutStream.hpp.html  index.codebase_interface_include_public_api.Queue.hpp.html  index.codebase_interface_include_public_api.Scheduler.hpp.html  index.codebase_interface_include_public_api.Semaphore.hpp.html  index.codebase_interface_include_public_api.SequenceContainer.hpp.html  index.codebase_interface_include_public_api.SmartPointer.hpp.html  index.codebase_interface_include_public_api.String.hpp.html  (+92 more)
scripts/: build.sh  functions.sh
